Revision history for Test-Timer

0.16 2016-12-29 Maintenance release, update not required

- Elimination of warnings in test suite


0.15 2016-12-11 Maintenance release, update not required

- Addressed Kwalitee test: has_meta_json 

- Addressing minor cosmetics issues in release 0.14


0.14 2016-12-10 Maintenance release, update not required

- Corrections to file permissions, PR from Kent Fredric


0.13 2016-08-05 Maintenance release, update not required

- Corrections to the POD, feedback from Nick Morrott


0.12 2015-08-02 Maintenance release, update not required

- Added MetaProvides to Dist::Zilla build, this should assist in addressing the
  issue listed on CPANTS, see also below

- Addressing issue with inconsistent version

  Ref: http://cpants.cpanauthors.org/dist/Test-Timer-0.11


0.11 2015-07-15 Maintenance release, update not required

- Requirement for Perl 5.12 sneaked in [issue #3], analysed code with Perl::MinimumVersion 
  and decided for Perl version 5.6.0 as minimum requirement


0.10 2015-06-01 Maintenance release, update not required

- Test::Tester is marked as a normal runtime dependency [issue #2] (RT:1047699)

  https://github.com/jonasbn/testt/issues/2

- Upgraded license from Artistic license 1.0 to Artistic license 2.0

- Migrated build system from Module::Build to Dist::Zilla


0.09 2014-08-29 Maintenance release, update not required

- Addressing [issue #1], the occassional report on failing the rigid test of
  test_between

  https://github.com/jonasbn/testt/issues/1


0.08 2014-02-22 Maintenance release, update not required

- Repository migrated to Github from hosted Subversion

- Plenty of POD updates

- Added changes.t automatic assertion of the integrity of the Changes file,
  see also TESTT-4 [TESTT-6]

  https://logiclab.jira.com/browse/TESTT-6


0.07 2013-07-31 Maintenance release, update not required

- Corrected minor issue in this file, had forgotten to run in through the