@@ -49,5 +49,5 @@ English               = 0
 [Prereqs / TestRequires]
 Test::Tester          = 0
 Test::More            = 0
-Test::Exception       = 0
+Test::Fatal           = 0
 File::Spec            = 0
