@@ -2,7 +2,7 @@
 use strict;
 use Test::More tests => 3;
 
-use Test::Exception;
+use Test::Fatal; # like
 
 BEGIN { use_ok('Test::Timer'); }
 
@@ -10,4 +10,8 @@ time_nok( sub { sleep(2); }, 1, 'Failing test' );
 
 $Test::Timer::alert = 6;
 
-dies_ok { time_nok(sub { sleep(1); } ); } 'Dying test, missing argument';
+like(
+    exception { time_nok(sub { sleep(1); } ); },
+    qr/^Insufficient number of parameters/,
+    'Dying test, missing argument'
+);
